# kbv3

./: .auto_env_activate.sh  .auto_env_deactivate.sh  .gitignore  CMakeLists.txt  README.md  prj.conf
KBV3/: KBV3.kicad_sch  fp-info-cache
KBV3_KiCAD/: KBV3.kicad_sch  fp-info-cache
KiCAD Projects/: Parts List.txt
KiCAD Projects/Keyboard Matrix KiCAD/: KBV3.kicad_sch  KBV3_matrix.kicad_prl  KBV3_matrix.kicad_pro  KBV3_matrix.kicad_sch  fp-info-cache  ~KBV3_matrix.kicad_sch.lck
KiCAD Projects/KiCAD Libraries/USBPD_CHIP_MAX77958/: MAX77958.kicad_sym
KiCAD Projects/KiCAD Libraries/USBPD_CHIP_MAX77958/MAX77958_footprints.pretty/: 21-100339_W302B3&plus_1_ADI-L.kicad_mod  21-100339_W302B3&plus_1_ADI.kicad_mod  (+1 more)
KiCAD Projects/KiCAD Libraries/custom_lib/: 2024-03-22_01-44-00.kicad_sym
KiCAD Projects/KiCAD Libraries/symbols/: 5V_LDO_MCP1825S_5002E_DB.kicad_sym  Adj_LDO_MCP1825T_ADJE_DC.kicad_sym  Battery_Charger_MAX77960EFV06+.kicad_sym  USBPD_CHIP_MAX77958.bak
KiCAD Projects/MCU_Board/: KBV3_MCU_Board.kicad_prl  KBV3_MCU_Board.kicad_pro  KBV3_MCU_Board.kicad_sch  fp-info-cache
app/: CMakeLists.txt
app/dts/bindings/: kbv3,keys.yaml  ti,tca8418.yaml
app/src/: CMakeLists.txt  alive.c  key_mapping.c  key_mapping.h  keypad_encoder.h  keys.c  main.c  report.c  report.h  scan.c  scan.h  tca8418.c  tca8418_i2c.c  tca8418_i2c.h  tca8418_regs.h
app/src/cli/: CMakeLists.txt  cli_top.c
avr/: Makefile  README.md  compile_commands.json
avr/src/: main.c
environment/: auto_env  envr.vars  paths.local  requirements.txt
src/: linker.ld  startup.c
tools/: paths.local
(+12 files in other folders)
